# matrix-rs

./: .gitignore  Cargo.toml  Makefile.toml  README.md  debug.txt  load.ps1  load.txt
.github/workflows/: rust.yml
Blog/: blog.md
driver/: Cargo.toml  DriverCertificate.cer  Makefile.toml  build.rs  matrix.inx
driver/.cargo/: config.toml
driver/src/: expanded_stack.rs  hook.rs  lib.rs
hypervisor/: Cargo.toml
hypervisor/src/: addresses.rs  alloc.rs  allocator.rs  context.rs  controls.rs  ept.rs  error.rs  lib.rs  main.rs  mm.rs  msr.rs  msr_bitmap.rs  nt.rs  processor.rs  save_area.rs  segment.rs  segmentation.rs  serial.rs  support.rs  tables.rs  vcpu.rs  vcpu_data.rs  vmcs.rs  vmcs_region.rs  vmexit_handler.rs  vmexit_reason.rs  vmm.rs  vmm_stack.rs  vmx.rs  vmxon_region.rs
hypervisor/src/intel/: addresses.rs  controls.rs  descriptor.rs  events.rs  host_rsp.rs  invept.rs  invvpid.rs  launch.rs  launch_vm.nasm  mod.rs  msr_bitmap.rs  paging.rs  registers.rs  segmentation.rs  shared_data.rs  support.rs  vcpu.rs  vmcs.rs  vmerror.rs  vmexit.rs  vmlaunch.rs  vmm.rs  vmstack.rs  vmx.rs  vmxon.rs
hypervisor/src/intel/bitmap/: mod.rs
hypervisor/src/intel/ept/: access.rs  buffer.rs  hooks.rs  mod.rs  mtrr.rs  paging.rs
hypervisor/src/intel/host/: mod.rs
hypervisor/src/intel/vcpu/: mod.rs
hypervisor/src/intel/vmcs/: mod.rs
hypervisor/src/intel/vmexit/: cpuid.rs  ept.rs  exception.rs  invd.rs  invept.rs  invvpid.rs  mod.rs  msr.rs  rdtsc.rs  xsetbv.rs
hypervisor/src/intel/vmx/: mod.rs
hypervisor/src/intel/vmxon/: mod.rs
hypervisor/src/nt/: mod.rs
hypervisor/src/utils/: addresses.rs  alloc.rs  capture.rs  context.rs  controls.rs  debug.rs  function_hook.rs  help.rs  instructions.rs  mod.rs  nt.rs  processor.rs  segmentation.rs  tables.rs  x86_instructions.rs
hypervisor/src/utils/ssdt/: mod.rs  ssdt_find.rs  ssdt_hook.rs  sys_info.rs
hypervisor/src/vmcs/: mod.rs  vmcs_data.rs  vmcs_region.rs
hypervisor/src/x86_64/: mod.rs
hypervisor/src/x86_64/intel/: bitmap.rs  controls.rs  descriptor.rs  descriptors.rs  ept.rs  host.rs  host_rsp.rs  hostrsp.rs  launch.rs  mod.rs  msr_bitmap.rs  segmentation.rs  vcpu.rs  vmcs.rs  vmexit.rs  vmlaunch.rs  vmx.rs  vmxon.rs
hypervisor/src/x86_64/intel/descriptors/: descriptor_tables.rs  mod.rs  segment_descriptor.rs
hypervisor/src/x86_64/utils/: addresses.rs  mod.rs  nt.rs  processor.rs  registers.rs  x86_instructions.rs
