[package]
name = "matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk = "0.1.0"
wdk-alloc = "0.1.0"
wdk-panic = "0.1.0"
wdk-sys = "0.1.0"
hypervisor = { path = "../hypervisor", features = ["secondary-ept"] }
log = "0.4.20" # https://crates.io/crates/log
kernel-log = "0.1.2" # https://crates.io/crates/kernel-log
com_logger = "0.1.1" # https://crates.io/crates/com_logger

[build-dependencies]
wdk-build = "0.1.0"