[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdk = "0.1.0"
wdk-alloc = "0.1.0"
wdk-panic = "0.1.0"
wdk-sys = "0.1.0"
x86 = "0.52.0" # https://crates.io/crates/x86
x86_64 = "0.14.11" # https://crates.io/crates/x86_64
thiserror-no-std = "2.0.2" # https://crates.io/crates/thiserror-no-std
bitfield = "0.14.0" # https://crates.io/crates/bitfield
bit_field = "0.10.2" # https://crates.io/crates/bit_field
bitflags = "2.3.3" # https://crates.io/crates/bitflags
elain = "0.3.0" # https://crates.io/crates/elain
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # https://crates.io/crates/lazy_static
obfstr = "0.4.3" # https://crates.io/crates/obfstr/
static_assertions = "1.1.0" # https://crates.io/crates/static_assertions
log = "0.4.20" # https://crates.io/crates/log
kernel-log = "0.1.2" # https://crates.io/crates/kernel-log
com_logger = "0.1.1" # https://crates.io/crates/com_logger

[build-dependencies]
wdk-build = "0.1.0"