[package]
name = "hypervisor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
secondary-ept = [] # If this feature is enabled, two nested page tables will be created.
shellcode-hook = [] # Enables unstable inline hooks (currently not recommended)

[dependencies]
wdk = "0.1.0"
wdk-alloc = "0.1.0"
wdk-panic = "0.1.0"
wdk-sys = "0.1.0"
x86 = "0.52.0" # https://crates.io/crates/x86
x86_64 = "0.14.11" # https://crates.io/crates/x86_64
thiserror-no-std = "2.0.2" # https://crates.io/crates/thiserror-no-std
bitfield = "0.14.0" # https://crates.io/crates/bitfield
bit_field = "0.10.2" # https://crates.io/crates/bit_field
bitflags = "2.4.1" # https://crates.io/crates/bitflags
elain = "0.3.0" # https://crates.io/crates/elain
lazy_static = { version = "1.4.0", features = ["spin_no_std"] } # https://crates.io/crates/lazy_static
obfstr = "0.4.3" # https://crates.io/crates/obfstr/
static_assertions = "1.1.0" # https://crates.io/crates/static_assertions
log = "0.4.20" # https://crates.io/crates/log
kernel-log = "0.1.2" # https://crates.io/crates/kernel-log
com_logger = "0.1.1" # https://crates.io/crates/com_logger
iced-x86 = { version = "1.20.0", default-features = false, features = ["no_std", "decoder", "block_encoder", "instr_info", "no_d3now", "no_evex", "no_vex", "no_xop"] } # https://crates.io/crates/iced-x86

[build-dependencies]
wdk-build = "0.1.0"